# api--causality-engine

./: .gitignore  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE  README.md  ace-demo.cast  devlog.txt  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  demos.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: debug_log.rs  diff.rs  docs.rs  error.rs  glyph.rs  import.rs  init.rs  junit.rs  main.rs  mock.rs  render.rs  replay.rs  report.rs  run.rs  show.rs  validate.rs
crates/cli/tests/fixtures/: collection1_basic.json  collection2_intermediate.json  collection3_complex.json
crates/cli/tests/fixtures/expected/: collection1_basic.yaml  collection2_intermediate.yaml  collection3_complex.yaml
crates/core/: Cargo.toml
crates/core/src/: assertions.rs  graph.rs  http.rs  jsonpath.rs  lib.rs  redact.rs  validate.rs  validator.rs  variables.rs
crates/engine/: Cargo.toml
crates/engine/src/: assertions.rs  auth.rs  config.rs  edges.rs  http.rs  lib.rs  log.rs  mask.rs  redact.rs  runner.rs  schema.rs  trace.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
docs/: ace-ai-architecture-advanced-source.md  ace-ai-architecture.md  ace-ai-codebase-gap-analysis.md  ace-mvp-positioning-and-ship-readiness.md  assertions.md  parallel-fanout-design.md
docs/improvement-plan/: README.md
examples/: full_test.yaml  login_flow.yaml  postman_sample.json  retry_loop.yaml  retry_test.yaml  simple.yaml  token_flow.yaml
examples/auth/: bearer-token.yaml  login-and-profile.yaml
examples/branching/: conditional-transitions.yaml
examples/env-diff/: README.md  checkout.yaml  run-demo.sh
examples/env-diff/servers/: backend-new.yaml  backend-old.yaml
examples/fanout/: dashboard-load.yaml
examples/masks/: common.yaml
examples/resilience/: poll-until-ready.yaml  retry-on-failure.yaml
examples/stripe-drift/: README.md  expected.yaml  run-demo.sh  scenario.yaml
examples/weighted/: canary-rollout.yaml
examples/workflows/: crud-lifecycle.yaml  first-run.yaml  login-create-retry.yaml
scripts/: check-demo.sh  check-demo.test.sh
ui/backend/: main.py  models.py  requirements.txt
ui/backend/routes/: environments.py  history.py  runner.py  scenarios.py
ui/backend/services/: executor.py  storage.py
ui/frontend/: index.html  package-lock.json  package.json  tsc_errors.txt  tsconfig.tsbuildinfo  vite.config.ts
ui/frontend/src/: App.tsx  bindings.ts  types.ts
ui/frontend/src/__tests__/: HistoryPanel.test.tsx  RunPanel.test.tsx  Sidebar.test.tsx
ui/frontend/src/components/: Editor.tsx  EnvManager.tsx  ErrorBoundary.tsx  HistoryPanel.tsx  RunPanel.tsx  Sidebar.tsx  StepEditor.tsx  TopBar.tsx
ui/frontend/src/hooks/: useApi.ts
ui/frontend/src/styles/: globals.css
ui/tauri/: Cargo.toml  tauri.conf.json
ui/tauri/capabilities/: default.json
ui/tauri/src/: lib.rs  main.rs  storage.rs
ui/tauri/src/commands/: environments.rs  history.rs  mod.rs  runner.rs  scenarios.rs  workspace.rs
