[package]
name = "ace-core"
version = "0.1.5"
edition = "2024"
authors = ["Yatsuiii"]
license = "MIT"
repository = "https://github.com/Yatsuiii/api--causality-engine"

[features]
specta = ["dep:specta"]

[dependencies]
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
model = { path = "../model" }
ace-http = { path = "../http" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
