[package]
name = "engine"
version = "0.1.6"
edition = "2024"
authors = ["Yatsuiii"]
license = "MIT"
repository = "https://github.com/Yatsuiii/api--causality-engine"

[features]
default = ["schema"]
specta = ["dep:specta"]
# JSONSchema validation. Disabling drops the jsonschema + serde_yaml deps
# (~1MB of Cargo.lock); `schema:` assertions then record a disabled-feature
# failure at runtime rather than validating.
schema = ["dep:jsonschema", "dep:serde_yaml"]

[dependencies]
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
model = { path = "../model" }
ace-http = { path = "../http" }
base64 = "0.22"
form_urlencoded = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
jsonschema = { version = "0.17", default-features = false, optional = true }
futures = "0.3"
