[package]
name = "ace-http"
version = "0.1.0"
edition = "2024"
authors = ["Yatsuiii"]
license = "MIT"
repository = "https://github.com/Yatsuiii/api--causality-engine"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "multipart", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
