[package]
name = "runner"
version = "0.1.0"
edition = "2024"
authors = ["Yatsuiii"]
license = "MIT"
repository = "https://github.com/Yatsuiii/api--causality-engine"

[dependencies]
model = { path = "../model" }
ace-http = { path = "../http" }
ace-core = { path = "../core" }
base64 = "0.22"
form_urlencoded = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
