[package]
name = "ace-tauri"
version = "0.1.5"
edition = "2024"
authors = ["Yatsuiii"]
license = "MIT"
repository = "https://github.com/Yatsuiii/api--causality-engine"
description = "ACE Desktop — Tauri shell for the API Causality Engine"

[lib]
name = "ace_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ace-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# ACE engine crates (in-process; no subprocess).
model = { path = "../../crates/model" }
executor = { path = "../../crates/executor", features = ["specta"] }
ace-core = { path = "../../crates/core", features = ["specta"] }

# TypeScript binding generation for Tauri commands.
# Pinned to a known-compatible trio; bump together if upgrading.
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[dev-dependencies]
tempfile = "3"
